# AIPet

./: README.md
main/: CMakeLists.txt  imgui.ini  main.cpp
main/lib/CubismSdkForNative/: CHANGELOG.md  NOTICE.md  README.ja.md  README.md  cubism-info.yml
main/lib/CubismSdkForNative/Samples/D3D11/Demo/proj.d3d11.cmake/: CMakeLists.txt
main/lib/CubismSdkForNative/Samples/D3D11/Demo/proj.d3d11.cmake/src/: CubismDirectXRenderer.cpp  CubismDirectXView.cpp  CubismDirectXView.hpp  CubismSprite.cpp  CubismTextureManager.cpp  CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppModel.cpp  LAppModel.hpp  LAppSprite.cpp  LAppSpriteShader.cpp  LAppTextureManager.cpp  LAppView.cpp  LAppView.hpp  mainMinimum.cpp
main/lib/CubismSdkForNative/Samples/D3D9/Demo/proj.d3d9.cmake/: CMakeLists.txt
main/lib/CubismSdkForNative/Samples/D3D9/Demo/proj.d3d9.cmake/src/: CubismDirectXRenderer.cpp  CubismDirectXRenderer.hpp  CubismDirectXView.cpp  CubismDirectXView.hpp  CubismSprite.cpp  CubismTextureManager.cpp  CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppModel.cpp  LAppModel.hpp  LAppSpriteShader.cpp  LAppTextureManager.cpp  LAppView.cpp  LAppView.hpp  mainMinimum.cpp
main/lib/CubismSdkForNative/Samples/Metal/Demo/proj.ios.cmake/src/: CMakeLists.txt
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.android.cmake/Full/app/src/main/cpp/: LAppDelegate.cpp  LAppModel.cpp  LAppModel.hpp  LAppTextureManager.cpp  LAppView.cpp  LAppView.hpp
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.android.cmake/Minimum/app/src/main/cpp/: LAppMinimumDelegate.cpp  LAppMinimumModel.cpp  LAppMinimumModel.hpp  LAppMinimumView.cpp  LAppMinimumView.hpp  LAppTextureManager.cpp
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.harmonyos.cmake/Full/entry/src/main/cpp/src/: LAppDelegate.cpp  LAppModel.hpp  LAppTextureManager.cpp  LAppView.cpp  LAppView.hpp
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.ios.cmake/: CMakeLists.txt
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.ios.cmake/src/: AppDelegate.mm  LAppSprite.mm  ViewController.mm
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.ios.cmake/src/minimum/: MinAppDelegate.mm  MinLAppSprite.mm  MinViewController.mm
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.linux.cmake/src/: CubismUserModelExtend.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppModel.hpp  LAppView.cpp  LAppView.hpp  mainMinimum.cpp
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.mac.cmake/src/: CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppModel.cpp  LAppModel.hpp  LAppView.cpp  LAppView.hpp  mainMinimum.cpp
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.win.cmake/: CMakeLists.txt
main/lib/CubismSdkForNative/Samples/OpenGL/Demo/proj.win.cmake/src/: LAppDelegate.cpp  mainMinimum.cpp
main/lib/CubismSdkForNative/Samples/Vulkan/: README.ja.md  README.md
main/lib/CubismSdkForNative/Samples/Vulkan/Demo/proj.linux.cmake/src/: CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppModel.cpp  LAppModel.hpp  LAppTextureManager.cpp  LAppView.cpp  LAppView.hpp  mainMinimum.cpp
main/lib/CubismSdkForNative/Samples/Vulkan/Demo/proj.win.cmake/src/: LAppDelegate.cpp  LAppDelegate.hpp  LAppModel.cpp  LAppModel.hpp  LAppModelSpritePipeline.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppSpritePipeline.hpp  LAppTextureManager.cpp  LAppView.cpp  LAppView.hpp
main/src/: AIManager.cpp  AIManager.hpp  CMakeLists.txt  CubismSampleViewMatrix_Common.cpp  CubismSampleViewMatrix_Common.hpp  CubismUserModelExtend.cpp  CubismUserModelExtend.hpp  LAppAllocator_Common.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppModel_Common.cpp  LAppModel_Common.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite_Common.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppTextureManager_Common.cpp  LAppTextureManager_Common.hpp  LAppView_Common.cpp  LAppView_Common.hpp  LAppWavFileHandler_Common.cpp  LAppWavFileHandler_Common.hpp  Live2DManager.cpp  Live2DManager.hpp  MouseActionManager.cpp  MouseActionManager.hpp  MouseActionManager_Common.cpp  MouseActionManager_Common.hpp  TouchManager_Common.hpp  WindowManager.cpp  WindowManager.hpp
